--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -28,7 +28,11 @@
 // @import '~@angular/material/prebuilt-themes/indigo-pink.css';
 
 
-
+mat-dialog-container#modal-component {
+    border: 3px solid #262626;
+    border-radius: 11px;
+    background-color: #1a1a1a;
+}
 // -----Hide
 
 .sm-hide{
@@ -169,6 +173,9 @@
     left: 60px;
     margin-left: 1vh;
 }
+.mobile-button{
+    margin-top:15px;margin-left: 5px;
+}
 ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
     color: #fff;
     opacity: 1; /* Firefox */
@@ -259,7 +266,16 @@
 .footer-input-position{
     display: flex;
     flex-direction: row; 
-    margin-top: 7vh;
+    
+}
+.label-p{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 22px;
+    line-height: 24px;
+    
+    letter-spacing: 0.1px;
+    color: #FFFFFF;
 }
 .footer-mt{
     margin-top: 120px; 
@@ -294,6 +310,9 @@
     }
     .sm-hide{
         display: none !important;
+    }
+    .mobile-button{
+        margin-top:0.39vh;margin-left: 5px;
     }
 
 // ################ Nav on Mobile CSS #####################################
