--- a/src/app/shared/overlay/overlay-view-early-access/overlay-view-early-access.component.scss
+++ b/src/app/shared/overlay/overlay-view-early-access/overlay-view-early-access.component.scss
@@ -1,5 +1,24 @@
 @import "../overlay.component.scss";
 
+.get-early-box{
+    width: 43vh;
+    height: 10vh;
+    margin: 0px auto 25px auto;
+}
+.get-early-text{
+    font-family: 'Druk Wide Bold';
+    font-style: normal;
+    font-weight: bold;
+    font-size: 45px;
+    line-height: 130%;
+    text-align: center;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    @media (max-width: 799px) {
+        font-size: 26px;
+    }
+}
+
 .Overlay.EarlyAccess > .body {
     padding-top: 1rem;
     padding-bottom: 1rem;
@@ -9,7 +28,7 @@
     // background-repeat: no-repeat;
     // background-image: url('~/assets/images/early-access-gradient.jpg');
     // background-size: cover;
-    background: linear-gradient(115deg, #fc1470 0%, #cc18a6 50%, #8f06d1 100%);
+    // background: linear-gradient(115deg, #fc1470 0%, #cc18a6 50%, #8f06d1 100%);
     color: #ffffff !important;   
 }
 
@@ -19,13 +38,11 @@
 
 .sms-number {
     padding: 1.3rem;
-    border-radius: 2rem;
-    border: 3px solid white;
+    border: 1px solid rgba(255,255,255, 0.45);
     font-size: 2.5rem;
     font-weight: bold;
     width: 100%;
     text-align: center;
-    background-color: rgba(255, 255, 255, 0.1);
     color: #fff;
     display: flex;
     flex-direction: row;
@@ -34,13 +51,11 @@
 
     @media (max-width: 799px) {
         padding: 1.2rem;
-        border: 2px solid white;
         font-size: 2.1rem;
     }
 
     @media (max-width: 399px) {
         padding: 1rem;
-        border: 1px solid white;
         font-size: 1.8rem;
     }
 }
@@ -55,35 +70,57 @@
     top: 0;
     padding: 2rem;
     a {
-        font-size: 1.3rem;
-        color: #ffffff;
+    padding: 9px 10px;
+    font-weight: bold;
+    font-size: 10px;
+    color: #ffffff;
+    background-color: rgba(0,0,0, 0.35);
+    border-radius: 20px;
     }
 }
 
 .my-input {
-    //box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
     cursor: text;
-    padding: 8px 10px;
-    //transition: border .1s linear;
-    width: 60%;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
+    padding: 16px 35px 15px 35px;
+    width: 88%;
+    font-size: 36px;
+    color: #fff;
+    border-top-left-radius: 50px;
+    background: #665BFF;
+    border: 1px solid rgba(255, 255, 255, 0.45);
+    border-bottom-left-radius: 50px;
+    line-height: 24px;
+    letter-spacing: 0.01px;
+    border-right: 0px;
+    @media (max-width: 799px){
+        padding: 14px 25px 14px 25px;
+        width: 85%;
+        font-size: 20px;
+        border: 1px solid rgba(255, 255, 255, 0.45);
+        line-height: 0px;
+        border-right: 0px;
+    }
 }
 
 .send-button {
-    background: white;
-    margin-left: 1px;
-    width: 39%;
-    font-weight: 600;
-    color: black;
-    padding: 8px 9px;
-    //box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
-    border: none !important;
+    background: #665BFF;
+    width: 10%;
+    border: 1px solid rgba(255,255,255, 0.45);
     outline: none !important;
-    height: 32px;
-    :focus {
-        outline: none;
+    height: 77px;
+    border-top-right-radius: 50px;
+    border-bottom-right-radius: 50px;
+    border-left: 0px;
+    @media (max-width: 799px) {
+        border: 1px solid rgba(255, 255, 255, 0.45);
+        height: 54px;
+        border-top-right-radius: 40px;
+        border-bottom-right-radius: 40px;
+        border-left: 0px;
+        img{
+            height: 20px;
+            padding-right: 10px;
+            }
     }
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
+    
 }
